<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhotoCloud</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- keys -->
    <string name="parse_app_id">Pz2ope2OFVDLDypgpdFMpeZiXhnPjm62tDv40b35</string>
    <string name="parse_client_key">ISRt37kcr6frHkhzvJ3Y9cxhvZxyocO7bP795y4c</string>
    <string name="facebook_app_id">496776443798396</string>

    <!-- Strings for Login and Sign up activities -->
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="repeat_password">repeat password</string>
    <string name="log_in">Log in PhotoCloud</string>
    <string name="upper_log_in">LOG IN</string>
    <string name="upper_sign_up">SIGN UP</string>
    <string name="upper_input_username">INPUT USERNAME</string>
    <string name="sign_up">Sign up</string>
    <string name="incorrect_login">Incorrect login</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="incorrent_sign_up">error of input data (maybe two password)</string>
    <string name="incorrect_username_or_pasword">Incorrect username or password</string>
    <string name="remember_login">Remember login</string>
    <string name="log_in_twitter">Log in with Twitter</string>
    <string name="log_in_facebook">Log in with Facebook</string>
    <string name="accept">Accept</string>
    <string name="import_profile_picture_from_facebook">Import profile picture from Facebook</string>
    <string name="import_profile_picture_from_twitter">Import profile picture from Twitter</string>
    <string name="import_profile_picture_from_library">Import profile picture from Twitter</string>
    <string name="import_profile_picture_from_camera">Take photo to profile picture</string>
    <string name="no_import_profile_picture">No import profile picture</string>
    <string name="username_already_exist">This username already exist</string>
    <string name="newAlbum">New Album</string>

    <!-- explain images -->
    <string name="explain">explain</string>

    <!-- Strings menu -->
    <string name="albums">Albums</string>
    <string name="news">News</string>
    <!-- <string name="take_photo">Take photo</string> -->
    <string name="friends">Friends</string>
    <string name="profile">Profile</string>

    <!-- activities names -->
    <string name="title_activity_main">MainActivity</string>

    <!-- albums -->
    <string name="photo_title">photo title</string>
    <string name="photo_date">photo date</string>
    <string name="photo_content">photo content</string>
    <string name="title_my_photos">My photos</string>
    <string name="add_new_album">New album</string>
    <string name="input_album_title">input album title</string>
    <string name="add_members">Add members in album</string>
    <string name="input_username_members">input username members</string>
    <string name="members_of_album">members of album</string>
    <string name="album_title">album title</string>
    <string name="my_albums">My albums</string>
    <string name="no_album">You dont have any albums</string>
    <string name="like">like</string>
    <string name="unlike">unlike</string>
    <string name="label_likes">likes</string>
    <string name="label_comments">comments</string>
    <string name="zero">0</string>
    <string name="no_photos">This album dont have any photos</string>
    <string name="upload_by">Uploat by</string>
    <string name="title_info_dialog">Information</string>
    <string name="date_of_photo">date of photo</string>
    <string name="grid_view_mode">Grid mode</string>
    <string name="list_view_mode">List mode</string>
    <string name="enter_photo_title">Input photo title</string>
    <string name="new_album">New album</string>
    <string name="no_current_album">You dont have current album. Change in a profile</string>
    <string name="add_photo_from_gallery">Add photo from gallery</string>
    <string name="my_photos">My photos</string>
    <string name="add_members_album">ADD MEMBERS IN ALBUM</string>
    <string name="createdAt">created at</string>
    <string name="createdBy">created by</string>
    <string name="set_album_title_upper">SET ALBUM TITLE</string>
    <string name="delete_and_leave_album">Delete and leave album</string>
    <string name="leave_album">Leave album</string>
    <string name="admin">admin</string>
    <string name="album_settings">Album settings</string>
    <string name="delete_user">Delete member from album</string>
    <string name="you">You</string>
    <string name="photoSettings">Photo settings</string>
    <string name="delete_photo">Delete photo</string>
    <string name="not_delete_photo">Only can delete photo owner user</string>
    <string name="confirm_delete_photo">Are you sure that delete photo?</string>
    <string name="input_members">Input members</string>
    <string name="set_album_title">Set album title</string>

    <!-- Comments and likes -->
    <string name="add_your_comment">Add your comment</string>
    <string name="comment">comment</string>
    <string name="date_of_comment">date of comment</string>
    <string name="likes">likes</string>

    <!-- News -->
    <string name="label_add_photo">add photo in</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="days_ago">days ago</string>
    <string name="no_news">There are no news</string>

    <!-- profile -->
    <string name="logout">Log Out</string>
    <string name="label_albums">albums</string>
    <string name="label_friends">friends number</string>
    <string name="label_photos">photos</string>
    <string name="number_x">X</string>
    <string name="current_album">current album</string>
    <string name="current_album_name">album name</string>
    <string name="user_not_photos">You dont have any photos</string>
    <string name="set_current_album">Set current album</string>
    <string name="common_albums">Common albums:</string>
    <string name="private_albums">Private albums</string>
    <string name="friend">Friend</string>
    <string name="no_profile">You cant watch profile</string>

    <!-- Delete photo dialog -->
    <string name="dialog_delete_photo">Delete photo</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="dialog_delete_photo_message">Are you sure?</string>

    <!-- Friends -->
    <string name="input_username">input username</string>
    <string name="commonFriends">common friends</string>
    <string name="no_results">0 matches</string>
    <string name="no_friends">You dont have any friends</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="follow">follow</string>
    <string name="find_friends">Find Friends</string>
    <string name="recommended_friends">RECOMMENDED BY PHOTOCLOUD</string>
    <string name="follow_all">follow all recommended</string>
    <string name="following_all">following all recommended</string>
    <string name="search_people">Search People</string>
    <string name="search_people_lower">search people</string>
    <string name="search">Search</string>

    <!-- Menu set current photo -->
    <string name="remove_current_photo">Remove current photo</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_library">Choose from library</string>
    <string name="import_from_facebook">Import from facebook</string>
    <string name="import_from_twitter">Import from twitter</string>

    <!-- Profile users to search -->
    <string name="add_friend">add friend</string>
    <string name="delete_friend">delete friend</string>
    <string name="current_friend">Friends</string>
    <string name="title_activity_init">InitActivity</string>
    <string name="title_activity_loading_twitter_information">LoadingTwitterInformationActivity</string>
    <string name="title_activity_configure_new_profil_from_social_network">ConfigureNewProfilFromSocialNetwork</string>
    <string name="title_activity_input_username">InputUsernameActivity</string>
    <string name="title_activity_comments">CommentsActivity</string>
    <string name="title_activity_upload_photo">UploadPhotoActivity</string>
    <string name="title_activity_show_photo">ShowPhotoActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_list_view_photos">ListViewPhotosActivity</string>
    <string name="title_activity_show_full_screen_photo_profile">ShowFullScreenPhotoProfile</string>
    <string name="title_activity_full_screen_photos_current_user">FullScreenPhotosCurrentUser</string>
    <string name="title_activity_input_username_and_password">InputUsernameAndPassword</string>
    <string name="title_activity_download_data_user">DownloadDataUserActivity</string>
    <string name="title_activity_show_full_screen_photo_of_news">ShowFullScreenPhotoOfNews</string>
    <string name="title_activity_album_settings">AlbumSettingsActivity</string>
    <string name="title_activity_input_album_title">InputAlbumTitleActivity</string>
    <string name="title_activity_input_album_members">InputAlbumMembersActivity</string>
    <string name="title_activity_add_members_in_album">AddMembersInAlbumActivity</string>

</resources>
