<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <ImageView
        android:id="@+id/photo"
        android:layout_height="200dp"
        android:layout_width="250dp"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/explain"
        android:layout_centerInParent="true"/>
    
    <TextView 
        android:id="@+id/label_upload_by"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/upload_by"
        android:layout_below="@+id/photo"/>
    
    <TextView 
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/photo"
        android:layout_toRightOf="@+id/label_upload_by"
        android:text="@string/username"/>
    
        
    <Button 
        android:id="@+id/like"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/like"
        android:layout_below="@+id/label_upload_by"/>
    
    <Button
        android:id="@+id/unlike"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/unlike"
        android:layout_below="@+id/label_upload_by"/>
    
    <Button 
        android:id="@+id/comment"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/comment"
        android:layout_below="@+id/label_upload_by"
        android:layout_toRightOf="@+id/unlike"/>
    
    <LinearLayout
        android:id="@+id/like_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/label_upload_by"
        android:layout_toRightOf="@+id/comment">
        
        <TextView 
            android:id="@+id/number_of_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"/>
        
        <TextView 
            android:id="@+id/label_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_likes"
            android:layout_marginLeft="5dp"/>
        
        <TextView 
            android:id="@+id/number_of_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:layout_marginLeft="10dp"/>
        
        <TextView 
            android:id="@+id/label_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_comments"
            android:layout_marginLeft="5dp"/>
        
    </LinearLayout>
        
    <TextView 
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/like"
        android:text="@string/date_of_photo"/>
    
    

</RelativeLayout>
