<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_launcher"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/explain"/>

    <TextView
        android:id="@+id/username"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/profilePicture"
        android:textColor="@color/Black"
        android:text="@string/username"/>
    
    <TextView 
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:layout_below="@+id/username"
        android:textColor="@color/Black"
        android:layout_toRightOf="@+id/profilePicture"
        android:textSize="15sp"/>
    
    <LinearLayout
        android:id="@+id/panel_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comment"
        android:layout_toRightOf="@+id/profilePicture"
        android:orientation="horizontal">
        
       <ImageView
        android:id="@+id/image_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/username"
        android:src="@drawable/ic_action_time"/>
    
     <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_photo"
        android:textStyle="italic"
        android:textSize="10sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/Black"/> 
    </LinearLayout>  
    
</RelativeLayout>
