<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_launcher"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/explain"
        android:visibility="visible"/>
    
    <ProgressBar
        android:id="@+id/progressBarChangeProfilePicture"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginRight="10dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/username"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/profilePicture"
        android:text="@string/username"/>

    <Button
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/username"
        android:text="@string/logout" />
    
    <LinearLayout
        android:id="@+id/profile_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_toRightOf="@+id/profilePicture"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp">
    
	    <LinearLayout
	        android:id="@+id/photos"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:gravity="center"
	        android:layout_marginRight="10dp"
	        android:clickable="true">
	        
	        <TextView
	            android:id="@+id/photos_number"
	            android:textSize="15sp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/zero"/>
	        
	        <TextView
	            android:id="@+id/label_photos_number"
	            android:textSize="15sp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/label_photos"/>      
		</LinearLayout>
		
	    <LinearLayout
	        android:id="@+id/albums"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:gravity="center"
	        android:layout_marginRight="10dp"
	        android:clickable="true">
	      
	        <TextView
	            android:id="@+id/albums_number"
	            android:textSize="15sp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/zero"/>
	        
	        <TextView
	            android:id="@+id/label_albums_number"
	            android:textSize="15sp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/label_albums"/>   
		</LinearLayout>
		
	    <LinearLayout
	        android:id="@+id/friends"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:gravity="center"
	        android:clickable="true">
	      
	        <TextView
	            android:id="@+id/friends_number"
	            android:textSize="15sp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/zero"/>
	        
	        <TextView
	            android:id="@+id/label_friends_number"
	            android:textSize="15sp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/friends"/>     
		</LinearLayout>
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/currentAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profilePicture"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
	    
        <TextView
            android:id="@+id/label_current_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_album"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"/>
        
        <ImageView
	        android:id="@+id/current_album_cover"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:src="@drawable/ic_launcher"
	        android:layout_marginRight="5dp"
	        android:contentDescription="@string/explain"/>
        
         <TextView
            android:id="@+id/current_album_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:text="@string/current_album_name"/>
         
         <ImageButton 
	        android:id="@+id/set_current_album"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:src="@drawable/ic_action_edit"
	        android:contentDescription="@string/explain"
	        android:layout_gravity="center"
	        android:background="@drawable/selector_icons"/> 
    </LinearLayout>
    
    <ListView
        android:id="@+id/list_my_photos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:dividerHeight="5dp"
        android:listSelector="@android:color/transparent"
        android:layout_below="@+id/currentAlbum"/>
        
     <TextView
        android:id="@+id/no_albums"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:layout_below="@+id/button_logout"
        android:text="@string/user_not_photos"/>

    <ProgressBar
        android:id="@+id/progressBarListPhotos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/list_my_photos"/>
    
</RelativeLayout>
