<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <ImageView
		     android:id="@+id/profile_picture"
		     android:layout_width="40dp"
		     android:layout_height="40dp"
		     android:src="@drawable/ic_launcher"
		     android:contentDescription="@string/explain"/>
        
        <TextView
            android:id="@+id/username"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:text="@string/username"/>   
    </LinearLayout>
    
    <Button
        android:id="@+id/button_following"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:textSize="15sp"
        android:textColor="@color/White"
        android:text="@string/following"
        android:background="@drawable/bg_button_following"
        android:drawableLeft="@drawable/ic_action_accept_white_following"
        android:layout_alignParentRight="true"
        android:focusable="false"
        android:visibility="invisible"/>
    
    <Button
        android:id="@+id/button_follow"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:textSize="15sp"
        android:textColor="@color/White"
        android:text="@string/follow"
        android:focusable="false"
        android:background="@drawable/bg_button_follow"
        android:drawableLeft="@drawable/ic_action_new_follow_white"
        android:layout_alignParentRight="true"/>    
</RelativeLayout>
