<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black">

    <TextView
        android:id="@+id/album_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/White"
        android:textSize="25sp"
        android:text="@string/album_title"
        android:layout_centerHorizontal="true"/>
    
    <ImageView
        android:id="@+id/cover_album"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/explain"/>
    
    <TextView
        android:id="@+id/photos_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_picture"
        android:textColor="@color/White"
        android:textSize="20sp"
        android:text="@string/zero"
        android:layout_marginRight="5dp"
        android:layout_alignParentBottom="true"/>
    
    <TextView
        android:id="@+id/members_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_group_white"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/photos_number"
        android:textColor="@color/White"
        android:textSize="20sp"
        android:text="@string/zero"/>

</RelativeLayout>
