<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

     <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_launcher"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/explain"
        android:visibility="visible"/>
    
    <ProgressBar
        android:id="@+id/progressBarChangeProfilePicture"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginRight="10dp"
        android:visibility="invisible"/>
    
    <LinearLayout
        android:id="@+id/profile_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/profilePicture"
        android:orientation="horizontal"
        android:layout_centerInParent="true">
    
	     <LinearLayout
	        android:id="@+id/albums"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:gravity="center"
	        android:layout_marginRight="10dp"
	        android:clickable="true">
	        
	        <TextView
	            android:id="@+id/albums_number"
	            android:textSize="15sp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/zero"/>
	        
	        <TextView
	            android:id="@+id/label_albums_number"
	            android:textSize="15sp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/label_albums"/>      
		</LinearLayout>
		
	    <LinearLayout
	        android:id="@+id/followers"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:gravity="center"
	        android:layout_marginRight="10dp"
	        android:clickable="true">
	      
	        <TextView
	            android:id="@+id/followers_number"
	            android:textSize="15sp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/zero"/>
	        
	        <TextView
	            android:id="@+id/label_followers_number"
	            android:textSize="15sp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/followers"/>   
		</LinearLayout>
		
	    <LinearLayout
	        android:id="@+id/following"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:gravity="center"
	        android:clickable="true">
	      
	        <TextView
	            android:id="@+id/following_number"
	            android:textSize="15sp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/zero"/>
	        
	        <TextView
	            android:id="@+id/label_following_number"
	            android:textSize="15sp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/following"/>     
		</LinearLayout>
	</LinearLayout>
    
    <Button
        android:id="@+id/button_following"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:textSize="15sp"
        android:textColor="@color/White"
        android:text="@string/following"
        android:focusable="false"
        android:background="@drawable/bg_button_following"
        android:drawableLeft="@drawable/ic_action_accept_white_following"
        android:layout_below="@+id/profile_information"
        android:layout_toRightOf="@+id/profilePicture"
        android:layout_alignParentRight="true"
        android:visibility="visible"/>
    
    <Button
        android:id="@+id/button_follow"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:textSize="15sp"
        android:textColor="@color/White"
        android:text="@string/follow"
        android:focusable="false"
        android:background="@drawable/bg_button_follow"
        android:drawableLeft="@drawable/ic_action_new_follow_white"
        android:layout_below="@+id/profile_information"
        android:layout_toRightOf="@+id/profilePicture"
        android:layout_alignParentRight="true"/>      
        
    <ProgressBar
        android:id="@+id/progressBarOtherProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profilePicture"
        android:visibility="invisible"/>  
        
    <TextView
        android:id="@+id/common_albums"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_follow"
        android:text="@string/common_albums"/>
    
     <View
		android:id="@+id/line"
		android:layout_width="fill_parent"
		android:layout_height="1dp"
		android:layout_below="@+id/common_albums"
		android:background="@android:color/darker_gray"/>
    
    <TextView
        android:id="@+id/no_watch"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:text="@string/no_profile"/> 
     
    <ListView
        android:id="@+id/list_albums"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"/>
    
     <ProgressBar
         android:id="@+id/progressBarCommonAlbums"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:visibility="invisible"
         android:layout_marginRight="10dp"/>

</RelativeLayout>
